--- a/adminPage.html
+++ b/adminPage.html
@@ -123,34 +123,42 @@
         <pre id="links"></pre>
         <form onsubmit="updateLinks(event)">
             <h3>Update Links</h3>
-            <label for="index1">Index 1:</label><br>
-            <input type="number" id="index1" placeholder="Enter index 1"><br>
-            <label for="affiliateLink1">Affiliate Product Link 1:</label><br>
-            <input type="url" id="affiliateLink1" placeholder="Enter affiliate product link 1"><br>
-            <label for="imageLink1">Product Image Link 1:</label><br>
-            <input type="url" id="imageLink1" placeholder="Enter product image link 1"><br><br>
-
-            <label for="index2">Index 2:</label><br>
-            <input type="number" id="index2" placeholder="Enter index 2"><br>
-            <label for="affiliateLink2">Affiliate Product Link 2:</label><br>
-            <input type="url" id="affiliateLink2" placeholder="Enter affiliate product link 2"><br>
-            <label for="imageLink2">Product Image Link 2:</label><br>
-            <input type="url" id="imageLink2" placeholder="Enter product image link 2"><br><br>
-
-            <label for="index3">Index 3:</label><br>
-            <input type="number" id="index3" placeholder="Enter index 3"><br>
-            <label for="affiliateLink3">Affiliate Product Link 3:</label><br>
-            <input type="url" id="affiliateLink3" placeholder="Enter affiliate product link 3"><br>
-            <label for="imageLink3">Product Image Link 3:</label><br>
-            <input type="url" id="imageLink3" placeholder="Enter product image link 3"><br><br>
-
-            <label for="index4">Index 4:</label><br>
-            <input type="number" id="index4" placeholder="Enter index 4"><br>
-            <label for="affiliateLink4">Affiliate Product Link 4:</label><br>
-            <input type="url" id="affiliateLink4" placeholder="Enter affiliate product link 4"><br>
-            <label for="imageLink4">Product Image Link 4:</label><br>
-            <input type="url" id="imageLink4" placeholder="Enter product image link 4"><br><br>
-
+            <div class="input-group">
+                <div class="input-column">
+                    <label for="index1">Index 1:</label>
+                    <input type="number" id="index1" placeholder="Enter index 1"><br>
+                    <label for="affiliateLink1">Affiliate Product Link 1:</label>
+                    <input type="url" id="affiliateLink1" placeholder="Enter affiliate product link 1"><br>
+                    <label for="imageLink1">Product Image Link 1:</label>
+                    <input type="url" id="imageLink1" placeholder="Enter product image link 1"><br>
+                </div>
+                <div class="input-column">
+                    <label for="index2">Index 2:</label>
+                    <input type="number" id="index2" placeholder="Enter index 2"><br>
+                    <label for="affiliateLink2">Affiliate Product Link 2:</label>
+                    <input type="url" id="affiliateLink2" placeholder="Enter affiliate product link 2"><br>
+                    <label for="imageLink2">Product Image Link 2:</label>
+                    <input type="url" id="imageLink2" placeholder="Enter product image link 2"><br>
+                </div>
+            </div>
+            <div class="input-group">
+                <div class="input-column">
+                    <label for="index3">Index 3:</label>
+                    <input type="number" id="index3" placeholder="Enter index 3"><br>
+                    <label for="affiliateLink3">Affiliate Product Link 3:</label>
+                    <input type="url" id="affiliateLink3" placeholder="Enter affiliate product link 3"><br>
+                    <label for="imageLink3">Product Image Link 3:</label>
+                    <input type="url" id="imageLink3" placeholder="Enter product image link 3"><br>
+                </div>
+                <div class="input-column">
+                    <label for="index4">Index 4:</label>
+                    <input type="number" id="index4" placeholder="Enter index 4"><br>
+                    <label for="affiliateLink4">Affiliate Product Link 4:</label>
+                    <input type="url" id="affiliateLink4" placeholder="Enter affiliate product link 4"><br>
+                    <label for="imageLink4">Product Image Link 4:</label>
+                    <input type="url" id="imageLink4" placeholder="Enter product image link 4"><br>
+                </div>
+            </div>
             <button type="submit">Update Links</button>
         </form>
     </div>
