--- a/adminPage.html
+++ b/adminPage.html
@@ -43,22 +43,22 @@
                 {
                     url: document.getElementById('affiliateLink1').value,
                     imageUrl: document.getElementById('imageLink1').value,
-                    index: document.getElementById('index1').value
+                    index:14
                 },
                 {
                     url: document.getElementById('affiliateLink2').value,
                     imageUrl: document.getElementById('imageLink2').value,
-                    index: document.getElementById('index2').value
+                    index:15
                 },
                 {
                     url: document.getElementById('affiliateLink3').value,
                     imageUrl: document.getElementById('imageLink3').value,
-                    index: document.getElementById('index3').value
+                    index:16
                 },
                 {
                     url: document.getElementById('affiliateLink4').value,
                     imageUrl: document.getElementById('imageLink4').value,
-                    index: document.getElementById('index4').value
+                    index:17
                 },
             ];
 
